Version 2.02.169 - 
=====================================
  Skip rounding on cache chunk size boudary when create cache LV.
  Improve cache_set_params support for chunk_size selection.
  Fix metadata profile allocation/cache_[mode|policy] setting.
  Fix missing support for using allocation/cache_pool_chunk_size setting.
  Upstream git moved to https://sourceware.org/git/?p=lvm2
  Support conversion of raid type, stripesize and number of disks
  Reject writemostly/writebehind in lvchange during resynchronization.
  Deactivate active origin first before removal for improved workflow.
  Fix regression of accepting options --type and -m with lvresize (2.02.158).
  Add lvconvert --swapmetadata, new specific way to swap pool metadata LVs.
  Add lvconvert --startpoll, new specific way to start polling conversions.
  Add lvconvert --mergethin, new specific way to merge thin snapshots.
  Add lvconvert --mergemirrors, new specific way to merge split mirrors.
  Add lvconvert --mergesnapshot, new specific way to combine cow LVs.
  Split up lvconvert code based on command definitions.
  Split up lvchange code based on command definitions.
  Generate help output and man pages from command definitions.
  Verify all command line items against command definition.
  Match every command run to one command definition.
  Specify every allowed command definition/syntax in command-lines.in.
  Add extra memory page when limiting pthread stack size in clvmd.
  Support striped/raid0* <-> raid10_near conversions
  Support shrinking of RaidLvs
  Support region size changes on existing RaidLVs
  Avoid parallel usage of cpg_mcast_joined() in clvmd with corosync.
  Support raid6_{ls,rs,la,ra}_6 segment types and conversions from/to it.
  Support raid6_n_6 segment type and conversions from/to it.
  Support raid5_n segment type and conversions from/to it.
  Support new internal command _dmeventd_thin_command.
  Introduce new dmeventd/thin_command configurable setting.